force-app/main/default/objects/Leave_Managment__c/Leave_Managment__c.object-meta.xml
<CustomObject>
    <label>Leave Managment</label>
    <nameField>
        <displayFormat>LMID-{00000}</displayFormat>
        <label>Leave Managment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Managments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>