force-app/main/default/objects/Leave_Managment__c/fields/Leave_Description__c.field-meta.xml
<CustomField>
    <fullName>Leave_Description__c</fullName>
    <label>Leave Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>