force-app/main/default/objects/Leave_Managment__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <label>Leave Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid Leave</fullName>
            </value>
            <value>
                <fullName>Unpaid Leave</fullName>
            </value>
            <value>
                <fullName>Bereavement</fullName>
            </value>
            <value>
                <fullName>Paternity</fullName>
            </value>
            <value>
                <fullName>Maternity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>