force-app/main/default/objects/Leave_Managment__c/fields/Name_Of_Employee__c.field-meta.xml
<CustomField>
    <fullName>Name_Of_Employee__c</fullName>
    <label>Name Of Employee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>