force-app/main/default/objects/Leave_Managment__c/fields/satus__c.field-meta.xml
<CustomField>
    <fullName>satus__c</fullName>
    <label>satus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>approve</fullName>
            </value>
            <value>
                <fullName>pending</fullName>
            </value>
            <value>
                <fullName>reject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>